--- a/source_code/X.Robot.vcxproj
+++ b/source_code/X.Robot.vcxproj
@@ -65,7 +65,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <TargetName>fsu</TargetName>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <AdditionalOptions>-DUNICODE %(AdditionalOptions)</AdditionalOptions>
@@ -96,8 +98,10 @@
     <ClInclude Include="ParameterDetails.h" />
     <ClInclude Include="Registry.h" />
     <ClInclude Include="ReportConsole.h" />
+    <ClInclude Include="ReportConstants.h" />
     <ClInclude Include="ReportCSVReportOptions.h" />
     <ClInclude Include="ReportHTML.h" />
+    <ClInclude Include="ReportHTMLDeep.h" />
     <ClInclude Include="ReportHTMLReportOptions.h" />
     <ClInclude Include="ReportTextReportOptions.h" />
     <ClInclude Include="Help.h" />
@@ -147,6 +151,7 @@
     <ClCompile Include="ReportCSV.cpp" />
     <ClCompile Include="ReportHandler.cpp" />
     <ClCompile Include="ReportHTML.cpp" />
+    <ClCompile Include="ReportHTMLDeep.cpp" />
     <ClCompile Include="ReportSummary.cpp" />
     <ClCompile Include="ReportText.cpp" />
     <ClCompile Include="ReportXinorbis.cpp" />
