--- a/source_code/X.Robot.vcxproj.filters
+++ b/source_code/X.Robot.vcxproj.filters
@@ -159,9 +159,6 @@
     <ClInclude Include="Constants.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ErrorConstants.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Help.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -266,6 +263,9 @@
     </ClInclude>
     <ClInclude Include="DriveDetails.h">
       <Filter>Header Files\Data Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="StatusConstants.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
