--- a/source_code/X.Robot.vcxproj
+++ b/source_code/X.Robot.vcxproj
@@ -85,6 +85,8 @@
     <ClInclude Include="DatabaseHandler.h" />
     <ClInclude Include="DatabaseODBC.h" />
     <ClInclude Include="DatabaseSQlite.h" />
+    <ClInclude Include="ReportTree.h" />
+    <ClInclude Include="ReportTreeOptions.h" />
     <ClInclude Include="StatusConstants.h" />
     <ClInclude Include="Errors.h" />
     <ClInclude Include="ExtensionSearch.h" />
@@ -159,6 +161,7 @@
     <ClCompile Include="ReportDeep.cpp" />
     <ClCompile Include="ReportSummary.cpp" />
     <ClCompile Include="ReportText.cpp" />
+    <ClCompile Include="ReportTree.cpp" />
     <ClCompile Include="ReportXinorbis.cpp" />
     <ClCompile Include="ReportXML.cpp" />
     <ClCompile Include="ScanDetails.cpp" />
