--- a/source_code/X.Robot.vcxproj
+++ b/source_code/X.Robot.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="DatabaseSQlite.h" />
     <ClInclude Include="ReportTree.h" />
     <ClInclude Include="ReportTreeOptions.h" />
+    <ClInclude Include="ReportUtility.h" />
     <ClInclude Include="StatusConstants.h" />
     <ClInclude Include="Errors.h" />
     <ClInclude Include="ExtensionSearch.h" />
@@ -163,6 +164,7 @@
     <ClCompile Include="ReportSummary.cpp" />
     <ClCompile Include="ReportText.cpp" />
     <ClCompile Include="ReportTree.cpp" />
+    <ClCompile Include="ReportUtility.cpp" />
     <ClCompile Include="ReportXinorbis.cpp" />
     <ClCompile Include="ReportXML.cpp" />
     <ClCompile Include="ScanDetails.cpp" />
