Latest version (5.10 upload)

--- a/source_code/_custom.ini
+++ b/source_code/_custom.ini
@@ -4,9 +4,7 @@
 ;
 ; use the custom.ini to customise your FolderScanUltra experience
 ;
-; Database features are not yet available in this C++ rewrite :(
-;
-; February 8th 2019
+; June 11th 2022
 ;
 
 [main]
@@ -34,7 +32,7 @@ copyprefs=0
 ;    $xdrive would be equal to "P:"
 ;    $xfolder would be equal to "P:\utils\FolderScanUltra"
 ;
-datapath=$xfolder\system\
+datapath=$xfolder\data\
 
 ; If you want FolderScanUltra to use an external ODBC database (instead of SQlite) then set this to 1
 useodbc=0
@@ -44,3 +42,17 @@ connectionstring=
 ;
 ; if portable mode (or copyprefs) is set to 1 then ALL settings will be saved to this custom.ini file and not the registry
 [Prefs]
+;  0 - British English
+;  1 - Dutch
+;  2 - French
+;  3 - German
+;  4 - Italian
+;  5 - Portuguese
+;  6 - Spanish
+;  7 - Swedish
+;  8 - Czech
+;  9 - Hungarian
+; 10 - US English (similar to setting 0, but fewer Us)
+; 11 - Russian
+; 12 - lolcat ;)
+Language=0
