--- a/source_code/X.Robot.vcxproj
+++ b/source_code/X.Robot.vcxproj
@@ -101,6 +101,7 @@
     <ClInclude Include="DatabaseODBC.h" />
     <ClInclude Include="DatabaseSQlite.h" />
     <ClInclude Include="Debug.h" />
+    <ClInclude Include="ExecutionParameters.h" />
     <ClInclude Include="FileObjectSorted.h" />
     <ClInclude Include="ReportJSON.h" />
     <ClInclude Include="ReportTree.h" />
