--- a/source_code/X.Robot.vcxproj.filters
+++ b/source_code/X.Robot.vcxproj.filters
@@ -136,6 +136,9 @@
     <ClCompile Include="Compare.cpp">
       <Filter>Source Files\Compare</Filter>
     </ClCompile>
+    <ClCompile Include="ReportDates.cpp">
+      <Filter>Source Files\Reports</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DatabaseHandler.h">
@@ -335,6 +338,12 @@
     </ClInclude>
     <ClInclude Include="ExecutionParameters.h">
       <Filter>Header Files\Data Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="ReportDates.h">
+      <Filter>Header Files\Reports</Filter>
+    </ClInclude>
+    <ClInclude Include="ReportDateOptions.h">
+      <Filter>Header Files\Reports</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
